--- a/SimpleNimbleExtended/SimpleNimbleExtended.Android/SimpleNimbleExtended.Android.csproj
+++ b/SimpleNimbleExtended/SimpleNimbleExtended.Android/SimpleNimbleExtended.Android.csproj
@@ -54,6 +54,9 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>13.0.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat">
       <Version>28.0.0.3</Version>
     </PackageReference>
